# llm-regular

./: .env.example  .gitignore  README.md  coding文档.md  modeldata  pyproject.toml  requirements.txt  回复trae提问.md  项目结构.md
scripts/: analyze_synthetic_cmp.py  cmp.py  compare_velocity_spectra.py  llm_comparison.py  process_cmp.py  visualize_llm_inference.py  visualize_segy.py
src/neurosymbolic_avo/: __init__.py  pipeline.py
src/neurosymbolic_avo/agent/: blueprint.py  llm_agent.py
src/neurosymbolic_avo/core/: avo_classification.py  data_structures.py  features.py  nmo.py
src/neurosymbolic_avo/io/: segy_reader.py  synthetic.py
src/neurosymbolic_avo/kernel/: factory.py
src/neurosymbolic_avo/optimization/: interpolator.py  kernel_pool.py  scheduler.py
src/neurosymbolic_avo/solver/: map_solver.py
src/neurosymbolic_avo/visualization/: velocity_spectrum.py
